Animation for delete and complete button

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
         </div>
     </div>
-    <button onclick="darkMode()" name="theme_button">Dark mode</button>
+    <button class="dark-mode-button" onclick="darkMode()" id="theme_button">Dark mode</button>
     <script src="linkedList.js"></script>
     <script src="index.js"></script>
 </body>
